# codex_samples

./: AGENTS.md  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: API.md
examples/: quickstart.ipynb
samples/: compounds_small.csv  pharmacophore_example.csv
scripts/: setup.sh
src/pharmacophore_screening/: README.md  __init__.py  __main__.py  screener.py
tests/: conftest.py  test_2d.py  test_3d.py  test_import.py
